--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,6 @@ services:
   # FRONT
   front:
     container_name: stride-front
-    build: ./front
+    build: ./client
     ports:
       - '5173:5173'
